# paste-flow

./: AGENTS.md  DESIGN.md  package-lock.json  package.json
.claude/: settings.local.json
docs/: 00-feature-roadmap-index.md  pasteflow-architecture.md  pasteflow-implementation-plan.md  tier1-01-context-aware-smart-paste.md  tier1-02-paste-queue.md  tier1-03-smart-content-detection.md  tier1-04-paste-transforms.md  tier2-05-to-08-features.md  tier3-09-to-12-features.md
docs/superpowers/plans/: 2026-04-12-smart-templates-v2.md
docs/superpowers/specs/: 2026-04-12-smart-templates-v2-design.md
src/: main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: db.rs  lib.rs  main.rs
src-tauri/src/ai/: mod.rs  prompts.rs  reformat.rs
src-tauri/src/clipboard/: history.rs  mod.rs  paste.rs  queue.rs  queue_commands.rs  watcher.rs
src-tauri/src/platform/: linux_impl.rs  macos_impl.rs  mod.rs  windows_impl.rs
src-tauri/src/search/: fuzzy.rs
src-tauri/src/system/: autostart.rs  hotkey.rs  mod.rs  settings.rs  tray.rs
src-tauri/src/templates/: crud.rs  groups.rs  mod.rs  variables.rs
src/components/AI/: AIReformat.tsx
src/components/Help/: HelpGuide.tsx
src/components/History/: HistoryList.tsx
src/components/QuickPaste/: QueueIndicator.tsx
src/components/Settings/: GeneralSettings.tsx
src/components/Templates/: TemplateManager.tsx  TemplatePreview.tsx  VariableHelper.tsx  VariableModal.tsx
src/components/UI/: Toaster.tsx  TransformPopover.tsx
src/lib/: constants.ts  tauri.ts  theme.ts  transforms.ts  variables.ts
src/stores/: clipboardStore.ts  queueStore.ts  searchStore.ts  settingsStore.ts  templateStore.ts  toastStore.ts
src/styles/: globals.css
src/windows/: MainWindow.tsx  QuickPaste.tsx
