[package]
name = "pasteflow"
version = "0.1.0"
description = "Smart clipboard manager with templates & AI reformat"
authors = ["you"]
edition = "2021"

[lib]
name = "pasteflow_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "macos-private-api"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-autostart = "2"
tauri-plugin-fs = "2"
arboard = "3"
rusqlite = { version = "0.39.0", features = ["bundled"] }
reqwest = { version = "0.13.2", features = ["json"] }
tokio = { version = "1.51.1", features = ["full"] }
uuid = { version = "1.23.0", features = ["v4"] }
chrono = { version = "0.4.44", features = ["serde"] }
regex = "1.12.3"
open = "5"
windows-sys = { version = "0.59", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging", "Win32_System_Threading", "Win32_UI_Input_KeyboardAndMouse"] }

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.23"
objc2 = "0.5"
objc2-app-kit = { version = "0.2", features = ["NSWorkspace", "NSRunningApplication", "libc"] }
objc2-foundation = "0.2"

